--- a/Lab3/CMakeLists.txt
+++ b/Lab3/CMakeLists.txt
@@ -12,9 +12,10 @@ find_package( Qt5Network REQUIRED)
 find_package( Qt5OpenGL REQUIRED)
 
 set(SOURCE_EXE main.cpp)
-set(SOURCE_LIB function.cpp)
+set(SOURCE_LIB function.cpp hello.cpp )
+add_library(hello SHARED ${SOURCE_LIB})
 add_library(function SHARED ${SOURCE_LIB})
 add_executable(main ${SOURCE_EXE})
-target_link_libraries(main function Qt5::Core Qt5::Widgets Qt5::Network Qt5::OpenGL ${Boost_LIBRARIES})
+target_link_libraries(main hello function Qt5::Core Qt5::Widgets Qt5::Network Qt5::OpenGL ${Boost_LIBRARIES})
 
 
